[gd_scene load_steps=4 format=3 uid="uid://chdf0cqgxk6ud"]

[ext_resource type="Texture2D" uid="uid://bc5xw5vpo0k80" path="res://placeholderArt/decor assets/barrel.png" id="1_7ff6o"]
[ext_resource type="Script" uid="uid://bumwk54dpae5a" path="res://dialogue/characterModel.gd" id="1_y8hrm"]
[ext_resource type="PackedScene" uid="uid://egqkkc7j0yta" path="res://dialogue/dialogueStarter.tscn" id="2_tmkyq"]

[node name="testCharacterOne" type="Node2D"]
script = ExtResource("1_y8hrm")

[node name="looks" type="Sprite2D" parent="."]
modulate = Color(1, 0.55, 0.5575, 1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_7ff6o")

[node name="dialogueStarter" parent="." instance=ExtResource("2_tmkyq")]
collision_layer = 32

[connection signal="body_entered" from="dialogueStarter" to="." method="_on_dialogue_starter_body_entered"]
[connection signal="body_exited" from="dialogueStarter" to="." method="_on_dialogue_starter_body_exited"]
